[tool.poetry]
name = "vanna-example"
version = "0.1.0"
description = ""
authors = ["matifonseca <fonseca.196@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
vanna = {extras = ["chromadb", "duckdb", "ollama"], version = "^0.6.4"}
kaleido = "0.2.1"
chromadb = "^0.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
